--- a/frontend/htx/src/App.css
+++ b/frontend/htx/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.btn-lighten:hover {
+  background-color: #DCF2B0;
+  color: black/* Lighter color on hover */
+}
