--- a/frontend/htx/src/App.css
+++ b/frontend/htx/src/App.css
@@ -45,3 +45,36 @@
 body {
     margin-top: 10vh;
 }
+
+
+.grade-box {
+    color: white;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    border-radius: 5px;
+    margin-right: 5px;
+    width: 3vw;
+    height: 3vw;
+}
+
+.tooltip {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.grade-box:hover .tooltip {
+    visibility: visible;
+}
+
