fixed dynamic registration, login and subject fetching

--- a/frontend/htx/src/App.css
+++ b/frontend/htx/src/App.css
@@ -39,7 +39,13 @@
 
 .btn-lighten:hover {
   background-color: #DCF2B0;
-  color: black/* Lighter color on hover */
+  color: black
+
+
+
+
+
+    /* Lighter color on hover */
 }
 
 body {
