Added redirections based on jwt and fixed the tooltip

--- a/frontend/htx/src/App.css
+++ b/frontend/htx/src/App.css
@@ -1,51 +1,51 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .btn-lighten:hover {
-  background-color: #DCF2B0;
-  color: black/* Lighter color on hover */
+    background-color: #DCF2B0;
+    color: black 
 }
 
 body {
     margin-top: 10vh;
 }
-
 
 .grade-box {
     color: white;
@@ -58,12 +58,13 @@ body {
     width: 3vw;
     height: 3vw;
 }
-.hovered-grade {
+
+.clicked-grade {
     position: absolute;
-    background-color: white;
-    border: 1px solid black;
+    opacity: 0.9;
+    background-color: #b1d69f;
+    border: none;
+    border-radius: 5px;
     padding: 10px;
     z-index: 999;
 }
-
-
